[gd_scene load_steps=26 format=3 uid="uid://cdxrvdedkcdfu"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_gy42u"]
[ext_resource type="Texture2D" uid="uid://chuy2t0jlq432" path="res://assets/cells_back.png" id="2_1lpjx"]
[ext_resource type="Script" path="res://scripts/ParallaxBackground.gd" id="2_aio3j"]
[ext_resource type="Texture2D" uid="uid://5153ejxv14cy" path="res://assets/BackgroundSky.png" id="2_gq0yc"]
[ext_resource type="PackedScene" uid="uid://5ejfca8wuhb0" path="res://scenes/waves_line.tscn" id="3_gukrb"]
[ext_resource type="Texture2D" uid="uid://c3lo60qkjr7l2" path="res://assets/storm/lightningRowaseprite.png" id="4_c0b11"]
[ext_resource type="Texture2D" uid="uid://bpogcebnsotrr" path="res://assets/FrontSkeyForParalax.png" id="4_dhp0v"]
[ext_resource type="Texture2D" uid="uid://chjx4ogb76xkx" path="res://assets/BackCloudsForParalax.png" id="4_poe2v"]
[ext_resource type="Texture2D" uid="uid://dxgnqbhq27uwj" path="res://assets/ship.png" id="7_fldeb"]
[ext_resource type="Texture2D" uid="uid://dnr154flixl1f" path="res://assets/shipShadow.png" id="9_ffc70"]
[ext_resource type="PackedScene" uid="uid://si6gmgky848r" path="res://scenes/game_interface.tscn" id="11_cgjtn"]
[ext_resource type="Texture2D" uid="uid://ib2b34oj0th2" path="res://assets/berth.png" id="15_sd1jh"]
[ext_resource type="LabelSettings" uid="uid://cr45oyx4tfw17" path="res://SettingsForLabel.tres" id="17_4y0im"]
[ext_resource type="Shader" path="res://scenes/pause_menu.gdshader" id="17_jq0q3"]
[ext_resource type="FontFile" uid="uid://cu7ji2y23xvwi" path="res://assets/fonts/Yazo.ttf" id="18_44g2y"]
[ext_resource type="Texture2D" uid="uid://i1uai8bad774" path="res://assets/Btns/ReplayBtn.png" id="18_im7sl"]
[ext_resource type="Texture2D" uid="uid://depv2bseigv6b" path="res://assets/Btns/ReplayBtnPressed.png" id="19_7q6iq"]
[ext_resource type="Texture2D" uid="uid://bs38sni40ixvt" path="res://assets/Btns/HomeBtnNormal.png" id="20_fok0h"]
[ext_resource type="Texture2D" uid="uid://c6ngi1ni8brnx" path="res://assets/Btns/HomeBtnPressed.png" id="21_3suhx"]
[ext_resource type="Texture2D" uid="uid://bq2s3he4okkjq" path="res://assets/storm/DockerFace.png" id="25_cr43o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rghh8"]
shader = ExtResource("17_jq0q3")
shader_parameter/lod = 0.8

[sub_resource type="LabelSettings" id="LabelSettings_gq0ct"]
font = ExtResource("18_44g2y")
font_size = 120
font_color = Color(0.270588, 0.517647, 0.752941, 1)
outline_size = 10

[sub_resource type="Animation" id="Animation_wnin1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ParallaxBackground/Lightning:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(787, 3000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ParallaxBackground/NearestClouds/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ParallaxBackground/BackClouds/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ParallaxBackground/ParallaxLayer/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ds30t"]
resource_name = "StromAnimation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ParallaxBackground/Lightning:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(787, 3000), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(780, 1550), Vector2(787, 1550), Vector2(787, 3000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ParallaxBackground/NearestClouds/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.45098, 0.45098, 0.45098, 1), Color(0.45098, 0.45098, 0.45098, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ParallaxBackground/BackClouds/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.419608, 0.419608, 0.419608, 1), Color(0.419608, 0.419608, 0.419608, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ParallaxBackground/ParallaxLayer/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.568627, 0.568627, 0.568627, 1), Color(0.568627, 0.568627, 0.568627, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_stbr2"]
_data = {
"RESET": SubResource("Animation_wnin1"),
"StromAnimation": SubResource("Animation_ds30t")
}

[node name="Main" type="Node2D" node_paths=PackedStringArray("gameInterface", "loseMenu")]
script = ExtResource("1_gy42u")
gameInterface = NodePath("GameInterface")
loseMenu = NodePath("GameLose")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_aio3j")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(12, -301)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-10, -4)
texture = ExtResource("2_gq0yc")
centered = false

[node name="Lightning" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(492, 318)
scale = Vector2(5, 5)
texture = ExtResource("4_c0b11")
hframes = 11

[node name="BackClouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BackClouds"]
position = Vector2(0, -427)
texture = ExtResource("4_poe2v")
centered = false

[node name="NearestClouds" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/NearestClouds"]
position = Vector2(-30, -307)
texture = ExtResource("4_dhp0v")
centered = false

[node name="SeperBackWaves" type="Node2D" parent="."]
modulate = Color(0, 1, 1, 0.662745)
position = Vector2(543, 1056)

[node name="WavesLine" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]

[node name="WavesLine2" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 20)

[node name="WavesLine3" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 40)

[node name="WavesLine4" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 60)

[node name="WavesLine5" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 80)

[node name="WavesLine6" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 100)

[node name="WavesLine7" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 120)

[node name="WavesLine8" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 140)

[node name="WavesLine9" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 160)

[node name="WavesLine10" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 180)

[node name="WavesLine11" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 200)

[node name="WavesLine12" parent="SeperBackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 220)

[node name="BackWaves" type="Node2D" parent="."]
modulate = Color(0.333333, 1, 1, 0.866667)
position = Vector2(460, 1200)
scale = Vector2(1.5, 1.5)

[node name="WavesLine" parent="BackWaves" instance=ExtResource("3_gukrb")]

[node name="WavesLine2" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 20)

[node name="WavesLine3" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 40)

[node name="WavesLine4" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 60)

[node name="WavesLine5" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 80)

[node name="WavesLine6" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 100)

[node name="WavesLine7" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 120)

[node name="WavesLine8" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 140)

[node name="WavesLine9" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 160)

[node name="WavesLine10" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 180)

[node name="WavesLine11" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(0, 200)

[node name="WavesLine12" parent="BackWaves" instance=ExtResource("3_gukrb")]
position = Vector2(16, 220)

[node name="Ship" type="Sprite2D" parent="."]
position = Vector2(420, 677)
texture = ExtResource("7_fldeb")

[node name="Back" type="Sprite2D" parent="."]
visible = false
position = Vector2(420, 741)
texture = ExtResource("2_1lpjx")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(300, 600)
offset_left = 100.0
offset_top = 100.0
offset_right = 740.0
offset_bottom = 1380.0
size_flags_horizontal = 3
color = Color(0, 0.819608, 0.952941, 0.270588)

[node name="GameBoard" type="Node2D" parent="."]
position = Vector2(100, 100)

[node name="Grid" type="Node2D" parent="GameBoard"]

[node name="Pieces" type="Node2D" parent="GameBoard"]

[node name="ParticlesContainer" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 800.0
offset_top = 400.0
offset_right = 840.0
offset_bottom = 423.0

[node name="LevelLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 800.0
offset_top = 470.0
offset_right = 840.0
offset_bottom = 493.0

[node name="SpeedLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 800.0
offset_top = 540.0
offset_right = 801.0
offset_bottom = 563.0

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 640.0
offset_right = 593.0
offset_bottom = 666.0
text = "GAME OVER\\nPress Enter to restart"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(550, 661)
offset = Vector2(2.63, 0)

[node name="Timer" type="Timer" parent="."]

[node name="WavesFront" type="Node2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(429, 1554)
scale = Vector2(2, 2)

[node name="WavesLine" parent="WavesFront" instance=ExtResource("3_gukrb")]

[node name="WavesLine2" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 20)

[node name="WavesLine3" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(0, 40)

[node name="WavesLine4" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 60)

[node name="WavesLine5" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(0, 80)

[node name="WavesLine6" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 100)

[node name="WavesLine7" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(0, 120)

[node name="WavesLine8" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 140)

[node name="WavesLine9" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(0, 160)

[node name="WavesLine10" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 180)

[node name="WavesLine11" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(0, 200)

[node name="WavesLine12" parent="WavesFront" instance=ExtResource("3_gukrb")]
position = Vector2(16, 220)

[node name="ShipShadow" type="Sprite2D" parent="."]
position = Vector2(421, 1709)
texture = ExtResource("9_ffc70")

[node name="GameInterface" parent="." instance=ExtResource("11_cgjtn")]

[node name="Berth" type="Sprite2D" parent="."]
position = Vector2(553, 1411)
texture = ExtResource("15_sd1jh")

[node name="NextPieceDisplay" type="Node2D" parent="."]
position = Vector2(733, 658)

[node name="GameLose" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameLose"]
material = SubResource("ShaderMaterial_rghh8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="GameLose"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GameLose/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -263.0
offset_right = 200.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
text = "ВАШ РЕЗУЛЬТАТ"
label_settings = SubResource("LabelSettings_gq0ct")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="score" type="Label" parent="GameLose/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
label_settings = ExtResource("17_4y0im")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GameLose/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="teo" type="Label" parent="GameLose/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TEO"
label_settings = ExtResource("17_4y0im")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="ReloadBtn" type="TextureButton" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_im7sl")
texture_pressed = ExtResource("19_7q6iq")
texture_hover = ExtResource("19_7q6iq")
texture_focused = ExtResource("19_7q6iq")

[node name="MarginContainer2" type="MarginContainer" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HomeBtn" type="TextureButton" parent="GameLose/Control/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("20_fok0h")
texture_pressed = ExtResource("21_3suhx")
texture_hover = ExtResource("21_3suhx")
texture_focused = ExtResource("21_3suhx")

[node name="Docker" type="Sprite2D" parent="."]
position = Vector2(787, 3000)
scale = Vector2(3, 3)
texture = ExtResource("25_cr43o")

[node name="UpDownSpeed" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="StormTimer" type="Timer" parent="."]
wait_time = 90.0
autostart = true

[node name="AnimationStorm" type="AnimationPlayer" parent="."]
root_node = NodePath("../Docker")
libraries = {
"": SubResource("AnimationLibrary_stbr2")
}

[connection signal="button_down" from="GameLose/Control/VBoxContainer/ReloadBtn" to="." method="_on_reload_btn_button_down"]
[connection signal="button_down" from="GameLose/Control/VBoxContainer/HomeBtn" to="." method="_on_home_btn_button_down"]
[connection signal="timeout" from="UpDownSpeed" to="." method="_on_up_down_speed_timeout"]
[connection signal="timeout" from="StormTimer" to="." method="_on_storm_timer_timeout"]
